--- a/PlantLoggerApp/PlantLoggerApp/Views/ItemsPage.xaml
+++ b/PlantLoggerApp/PlantLoggerApp/Views/ItemsPage.xaml
@@ -14,21 +14,41 @@
       x:DataType enables compiled bindings for better performance and compile time validation of binding expressions.
       https://docs.microsoft.com/xamarin/xamarin-forms/app-fundamentals/data-binding/compiled-bindings
     -->
+    
     <RefreshView x:DataType="local:ItemsViewModel" Command="{Binding LoadItemsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
         <CollectionView x:Name="ItemsListView"
                 ItemsSource="{Binding Plants}"
-                SelectionMode="None">
+                SelectionMode="Single">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <StackLayout Padding="10" x:DataType="model:Plant">
+                    <StackLayout Padding="10" x:DataType="model:Plant" Spacing="4">
+                        
+                        <Label Text="Plant ID" x:Name="testlabel"></Label>
                         <Label Text="{Binding PlantID}" 
                             LineBreakMode="NoWrap" 
                             Style="{DynamicResource ListItemTextStyle}" 
                             FontSize="16" />
+                        <Label Text="Plant type"></Label>
                         <Label Text="{Binding Type}" 
                             LineBreakMode="NoWrap"
                             Style="{DynamicResource ListItemDetailTextStyle}"
                             FontSize="13" />
+                        <Label Text="Current temperature"></Label>
+                        <Label Text="{Binding Temperature}" 
+                            LineBreakMode="NoWrap"
+                            Style="{DynamicResource ListItemDetailTextStyle}"
+                            FontSize="13" />
+                        <Label Text="Plant dry or not"></Label>
+                        <Label Text="{Binding IsDry}" 
+                            LineBreakMode="NoWrap"
+                            Style="{DynamicResource ListItemDetailTextStyle}"
+                            FontSize="13" />
+                        <Label Text="Is the temperature to high"></Label>
+                        <Label Text="{Binding Temperature_warning}" 
+                            LineBreakMode="NoWrap"
+                            Style="{DynamicResource ListItemDetailTextStyle}"
+                            FontSize="13" />
+                        <!--
                         <StackLayout.GestureRecognizers>
                             <TapGestureRecognizer 
                                 NumberOfTapsRequired="1"
@@ -36,6 +56,7 @@
                                 CommandParameter="{Binding .}">
                             </TapGestureRecognizer>
                         </StackLayout.GestureRecognizers>
+                        -->
                     </StackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
