--- a/PlantLoggerApp/PlantLoggerApp/Views/NewItemPage.xaml
+++ b/PlantLoggerApp/PlantLoggerApp/Views/NewItemPage.xaml
@@ -1,17 +1,29 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewModel="clr-namespace:PlantLoggerApp.ViewModels;assembly=PlantLoggerApp"
              x:Class="PlantLoggerApp.Views.NewItemPage"
              Shell.PresentationMode="ModalAnimated"
              Title="New Item"
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
              ios:Page.UseSafeArea="true">
+
+    <ContentPage.BindingContext>
+
+        <viewModel:NewItemViewModel/>
+    </ContentPage.BindingContext>
     <ContentPage.Content>
         <StackLayout Spacing="3" Padding="15">
-            <Label Text="Text" FontSize="Medium" />
+            <Label Text="Type of plant" FontSize="Medium" />
             <Entry Text="{Binding Type, Mode=TwoWay}" FontSize="Medium" />
-            <Label Text="Description" FontSize="Medium" />
-            <Editor Text="{Binding Temperature_warning, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Medium" Margin="0" />
+            <Label Text="Is the soil dry" FontSize="Medium" BackgroundColor="{Binding ColorBackground, Mode=TwoWay}" />
+            <Switch IsToggled="{Binding IsDry, Mode=TwoWay}" />
+            <Label Text="Air humidity" FontSize="Medium" />
+            <Entry Text="{Binding  Air_humidity, Mode=TwoWay}" FontSize="Medium" />
+            <Label Text="The plants ID" FontSize="Medium" />
+            <Entry Text="{Binding PlantID, Mode=TwoWay}" FontSize="Medium" />
+            <Label Text="Temperature warning" FontSize="Medium" />
+            <Switch IsToggled="{Binding Temperature_warning, Mode=OneWay}"  />
             <StackLayout Orientation="Horizontal">
                 <Button Text="Cancel" Command="{Binding CancelCommand}" HorizontalOptions="FillAndExpand"></Button>
                 <Button Text="Save" Command="{Binding SaveCommand}" HorizontalOptions="FillAndExpand"></Button>
