--- a/PlantLoggerApp/PlantLoggerApp/Views/ItemsPage.xaml
+++ b/PlantLoggerApp/PlantLoggerApp/Views/ItemsPage.xaml
@@ -18,7 +18,7 @@
     <RefreshView x:DataType="local:ItemsViewModel" Command="{Binding LoadItemsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
         <CollectionView x:Name="ItemsListView"
                 ItemsSource="{Binding Plants}"
-                SelectionMode="Single">
+                SelectionMode="None">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <StackLayout Padding="10" x:DataType="model:Plant" Spacing="4">
@@ -28,6 +28,7 @@
                             LineBreakMode="NoWrap" 
                             Style="{DynamicResource ListItemTextStyle}" 
                             FontSize="16" />
+                        <Image Source="{Binding ImageSource}"></Image>
                         <Label Text="Plant type"></Label>
                         <Label Text="{Binding Type}" 
                             LineBreakMode="NoWrap"
@@ -48,7 +49,7 @@
                             LineBreakMode="NoWrap"
                             Style="{DynamicResource ListItemDetailTextStyle}"
                             FontSize="13" />
-                        <!--
+                     
                         <StackLayout.GestureRecognizers>
                             <TapGestureRecognizer 
                                 NumberOfTapsRequired="1"
@@ -56,7 +57,7 @@
                                 CommandParameter="{Binding .}">
                             </TapGestureRecognizer>
                         </StackLayout.GestureRecognizers>
-                        -->
+                 
                     </StackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
