--- a/PlantLoggerApp/PlantLoggerApp/Views/NewItemPage.xaml
+++ b/PlantLoggerApp/PlantLoggerApp/Views/NewItemPage.xaml
@@ -14,6 +14,8 @@
     </ContentPage.BindingContext>
     <ContentPage.Content>
         <StackLayout Spacing="3" Padding="15">
+            <Button Text="Take picture" Command="{Binding AddPicture} " ></Button>
+            <Image Source="{Binding ThePlants.ImageSource}"></Image>
             <Label Text="Type of plant" FontSize="Medium" />
             <Entry Text="{Binding Type, Mode=TwoWay}" FontSize="Medium" />
             <Label Text="Is the soil dry" FontSize="Medium" BackgroundColor="{Binding ColorBackground, Mode=TwoWay}" />
@@ -24,6 +26,7 @@
             <Entry Text="{Binding PlantID, Mode=TwoWay}" FontSize="Medium" />
             <Label Text="Temperature warning" FontSize="Medium" />
             <Switch IsToggled="{Binding Temperature_warning, Mode=OneWay}"  />
+           
             <StackLayout Orientation="Horizontal">
                 <Button Text="Cancel" Command="{Binding CancelCommand}" HorizontalOptions="FillAndExpand"></Button>
                 <Button Text="Save" Command="{Binding SaveCommand}" HorizontalOptions="FillAndExpand"></Button>
