--- a/PlantLoggerApp/PlantLoggerApp/Views/NewItemPage.xaml
+++ b/PlantLoggerApp/PlantLoggerApp/Views/NewItemPage.xaml
@@ -16,12 +16,14 @@
         <StackLayout Spacing="3" Padding="15">
             <Button Text="Take picture" Command="{Binding AddPicture} " ></Button>
             <Image Source="{Binding ThePlants.ImageSource}"></Image>
+            <Label Text="Name of plant"></Label>
+            <Entry Text="{Binding Name}"></Entry>
             <Label Text="Type of plant" FontSize="Medium" />
-            <Entry Text="{Binding Type, Mode=TwoWay}" FontSize="Medium" />
+            <Entry Text="{Binding PlantHumidity, Mode=TwoWay}" FontSize="Medium" />
             <Label Text="Is the soil dry" FontSize="Medium" BackgroundColor="{Binding ColorBackground, Mode=TwoWay}" />
-            <Switch IsToggled="{Binding IsDry, Mode=TwoWay}" />
+            <Entry Text="{Binding TempWarning}" />
             <Label Text="Air humidity" FontSize="Medium" />
-            <Entry Text="{Binding  Air_humidity, Mode=TwoWay}" FontSize="Medium" />
+            <Entry Text="{Binding  DrySoil, Mode=TwoWay}" FontSize="Medium" />
             <Label Text="The plants ID" FontSize="Medium" />
             <Entry Text="{Binding PlantID, Mode=TwoWay}" FontSize="Medium" />
             <Label Text="Temperature warning" FontSize="Medium" />
