--- a/PlantLoggerApp/PlantLoggerApp/Views/AboutPage.xaml
+++ b/PlantLoggerApp/PlantLoggerApp/Views/AboutPage.xaml
@@ -20,6 +20,7 @@
     <StackLayout Orientation="Vertical" Padding="30,24,30,24" Spacing="10">
                         <Button Text="Take picture" Command="{Binding AddPicture} " ></Button>
         <Image Source="{Binding ThePlants.ImageSource}"></Image>
+        <Button Text="Make notification" Command="{Binding MakeNotification}"></Button>
                                              
                                              
         
