--- a/PlantLoggerApp/PlantLoggerApp/Views/NewItemPage.xaml
+++ b/PlantLoggerApp/PlantLoggerApp/Views/NewItemPage.xaml
@@ -14,20 +14,19 @@
     </ContentPage.BindingContext>
     <ContentPage.Content>
         <StackLayout Spacing="3" Padding="15">
-            <Button Text="Take picture" Command="{Binding AddPicture} " ></Button>
-            <Image Source="{Binding ThePlants.ImageSource}"></Image>
+            <Button Text="Take picture" Command="{Binding FindPhoto} " ></Button>
+            <Image Source="{Binding ImageSource}"></Image>
             <Label Text="Name of plant"></Label>
             <Entry Text="{Binding Name}"></Entry>
-            <Label Text="Type of plant" FontSize="Medium" />
-            <Entry Text="{Binding PlantHumidity, Mode=TwoWay}" FontSize="Medium" />
-            <Label Text="Is the soil dry" FontSize="Medium" BackgroundColor="{Binding ColorBackground, Mode=TwoWay}" />
-            <Entry Text="{Binding TempWarning}" />
-            <Label Text="Air humidity" FontSize="Medium" />
-            <Entry Text="{Binding  DrySoil, Mode=TwoWay}" FontSize="Medium" />
             <Label Text="The plants ID" FontSize="Medium" />
             <Entry Text="{Binding PlantID, Mode=TwoWay}" FontSize="Medium" />
-            <Label Text="Temperature warning" FontSize="Medium" />
-            <Switch IsToggled="{Binding Temperature_warning, Mode=OneWay}"  />
+            <Label Text="Current humidity"></Label>
+            <Entry Text="{Binding PlantHumidity, Mode=TwoWay}" FontSize="Medium" />
+            <Label Text="Temperature" FontSize="Medium" />
+            <Entry Text="{Binding TempWarning}" />
+            <Label Text="Soil dryness" FontSize="Medium" BackgroundColor="{Binding ColorBackground, Mode=TwoWay}" />
+            <Entry Text="{Binding  DrySoil, Mode=TwoWay}" FontSize="Medium" />
+            
            
             <StackLayout Orientation="Horizontal">
                 <Button Text="Cancel" Command="{Binding CancelCommand}" HorizontalOptions="FillAndExpand"></Button>
