--- a/PlantLoggerApp/PlantLoggerApp/Views/NewItemPage.xaml
+++ b/PlantLoggerApp/PlantLoggerApp/Views/NewItemPage.xaml
@@ -15,14 +15,16 @@
     <ContentPage.Content>
         <StackLayout Spacing="3" Padding="15">
             <Button Text="Take picture" Command="{Binding AddPicture} " ></Button>
-            <Image Source="{Binding ThePlants.ImageSource}"></Image>
             <Label Text="The plants ID" FontSize="Medium" />
             <Entry Text="{Binding PlantID, Mode=TwoWay}" FontSize="Medium" />
+            <Image Source="{Binding ThePlants.ImageSource}"></Image>
             <Label Text="Current humidity"></Label>
             <Entry Text="{Binding PlantHumidity, Mode=TwoWay}" FontSize="Medium" />
             <Label Text="Temperature" FontSize="Medium" />
+            <Label Text="{Binding Temperature}" FontSize="Medium" />
+            <Label Text="Temperature to high" FontSize="Medium" />
             <Entry Text="{Binding TempWarning}" />
-            <Label Text="Soil dryness" FontSize="Medium" BackgroundColor="{Binding ColorBackground, Mode=TwoWay}" />
+            <Label Text="Soil to dry" FontSize="Medium" BackgroundColor="{Binding ColorBackground, Mode=TwoWay}" />
             <Entry Text="{Binding  DrySoil, Mode=TwoWay}" FontSize="Medium" />
             
            
